fix hero section tablet version

--- a/style.css
+++ b/style.css
@@ -110,8 +110,8 @@ h1 {
   align-items: center;
 }
 
-.hero-section .img-container {
-  max-width: 560px;
+.hero-img-container {
+  max-width: 500px;
   padding: 1em;
   position: relative;
 }
@@ -151,6 +151,28 @@ h1 {
     grid-column: 3;
     grid-row: 3;
     max-width: 100%;
+  }
+
+  h1 {
+    font-size: 3rem;
+  }
+
+  .hero-buttons-container {
+    flex-direction: row;
+    /* padding: 2em; */
+  }
+}
+
+@media (min-width: 768px) and (max-width: 992px) {
+  .hero-text-content-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 3em;
+  }
+
+  .hero-img-container {
+    padding: 2em 0;
   }
 }
 
@@ -196,14 +218,10 @@ h1 {
   }
 
   .hero-text-content-container {
-    padding-left: 2em;
+    padding-left: 1em;
   }
 
-  h1 {
-    font-size: 3rem;
-  }
-
-  .hero-buttons-container {
-    flex-direction: row;
+  .hero-img-container {
+    justify-self: end;
   }
 }
